ENH: add basic login/logout functionality

--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -13,9 +13,9 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
