--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -16,10 +17,12 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "qs": "^6.5.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
@@ -32,7 +35,9 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-observable": "^0.17.0",
+    "redux-persist": "^5.5.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
@@ -44,6 +49,8 @@
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.2",
+    "typescript-fsa": "^2.5.0",
+    "typescript-fsa-reducers": "^0.4.5",
     "url": "^0.11.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -57,16 +64,20 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/node": "^9.3.0",
+    "@types/qs": "^6.5.1",
     "@types/react": "^16.0.34",
+    "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
+    "@types/reselect": "^2.2.0",
     "redux-logger": "^3.0.6",
     "typings-for-css-modules-loader": "^1.7.0"
   },
