--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,6 +25,7 @@
     "qs": "^6.5.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
+    "raven-js": "^3.22.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dev-utils": "4.2.1",
@@ -33,6 +34,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
+    "redux-catch": "^1.3.1",
     "redux-form": "^7.2.1",
     "redux-observable": "^0.17.0",
     "redux-persist": "^5.5.0",
