--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -69,6 +69,7 @@
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/node": "^9.3.0",
+    "@types/ramda": "^0.25.16",
     "@types/react": "^16.0.34",
     "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
