--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -44,6 +44,7 @@
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
+    "styled-components": "^3.1.5",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^20.0.7",
     "ts-loader": "^2.3.7",
