--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -75,12 +75,16 @@
     "@types/react": "^16.0.34",
     "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
+    "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
     "@types/reselect": "^2.2.0",
+    "@types/webpack-env": "^1.13.5",
+    "babel-loader": "^7.1.2",
+    "react-hot-loader": "^4.0.0-beta.18",
     "redux-logger": "^3.0.6",
     "typings-for-css-modules-loader": "^1.7.0"
   },
