--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -56,6 +56,7 @@
     "typescript-fsa-reducers": "^0.4.5",
     "url": "^0.11.0",
     "url-loader": "0.6.2",
+    "uuid": "^3.2.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
@@ -82,6 +83,7 @@
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
     "@types/reselect": "^2.2.0",
+    "@types/uuid": "^3.4.3",
     "@types/webpack-env": "^1.13.5",
     "babel-loader": "^7.1.2",
     "react-hot-loader": "^4.0.0-beta.18",
