--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-catch": "^1.3.1",
     "redux-form": "^7.2.1",
@@ -56,7 +57,6 @@
     "typescript-fsa-reducers": "^0.4.5",
     "url": "^0.11.0",
     "url-loader": "0.6.2",
-    "uuid": "^3.2.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
@@ -80,10 +80,10 @@
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
+    "@types/recharts": "^1.0.13",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
     "@types/reselect": "^2.2.0",
-    "@types/uuid": "^3.4.3",
     "@types/webpack-env": "^1.13.5",
     "babel-loader": "^7.1.2",
     "react-hot-loader": "^4.0.0-beta.18",
