--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -27,6 +27,7 @@
     "ramda": "^0.25.0",
     "raven-js": "^3.22.1",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.3.3",
     "react-bootstrap": "^0.32.0",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
@@ -74,6 +75,7 @@
     "@types/node": "^9.3.0",
     "@types/ramda": "^0.25.16",
     "@types/react": "^16.0.34",
+    "@types/react-autosuggest": "^9.3.3",
     "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-hot-loader": "^3.0.5",
