--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
@@ -66,10 +67,12 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "serve": "node build/server.js"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.11.1",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/node": "^9.3.0",
