--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -67,8 +67,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "serve": "node build/server.js",
     "test": "node scripts/test.js --env=jsdom",
-    "serve": "node build/server.js"
+    "lint": "tslint --project ."
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
