ENH: add check for unused imports

--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitAny": true,
     "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
