--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-table": "^6.7.6",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-catch": "^1.3.1",
@@ -86,6 +87,7 @@
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
+    "@types/react-table": "^6.7.3",
     "@types/recharts": "^1.0.13",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
