ENH: switch to Typescript 2.7 and enable hot reloading

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -55,7 +55,7 @@
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.2",
     "typescript-fsa": "^2.5.0",
     "typescript-fsa-reducers": "^0.4.5",
     "url": "^0.11.0",
@@ -83,7 +83,6 @@
     "@types/react-autosuggest": "^9.3.3",
     "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
-    "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
@@ -94,7 +93,7 @@
     "@types/reselect": "^2.2.0",
     "@types/webpack-env": "^1.13.5",
     "babel-loader": "^7.1.2",
-    "react-hot-loader": "^4.0.0-beta.18",
+    "react-hot-loader": "^4.0.0-rc.0",
     "redux-logger": "^3.0.6",
     "typings-for-css-modules-loader": "^1.7.0"
   },
