--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "express": "^4.16.2",
+    "express-static-gzip": "^0.3.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
@@ -93,6 +94,8 @@
     "@types/reselect": "^2.2.0",
     "@types/webpack-env": "^1.13.5",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "compression-webpack-plugin": "^1.1.7",
     "react-hot-loader": "^4.0.0-rc.0",
     "redux-logger": "^3.0.6",
     "typings-for-css-modules-loader": "^1.7.0"
