--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -16,7 +16,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "importHelpers": true
   },
   "exclude": [
     "node_modules",
