--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.5",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "ellipsize": "0.0.3",
@@ -31,13 +32,13 @@
     "raven-js": "^3.22.1",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.3",
-    "react-bootstrap": "^0.32.0",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-table": "^6.7.6",
+    "reactstrap": "^5.0.0-beta",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-catch": "^1.3.1",
@@ -76,6 +77,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.3",
     "@types/express": "^4.11.1",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
@@ -83,12 +85,12 @@
     "@types/ramda": "^0.25.16",
     "@types/react": "^16.0.34",
     "@types/react-autosuggest": "^9.3.3",
-    "@types/react-bootstrap": "^0.32.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
     "@types/react-table": "^6.7.3",
+    "@types/reactstrap": "^5.0.17",
     "@types/recharts": "^1.0.13",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
