--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
