--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,7 +8,6 @@
     "bootstrap": "^4.0.0-beta.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "classnames": "^2.2.5",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "ellipsize": "0.0.3",
@@ -37,7 +36,9 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-syntax-highlighter": "^7.0.1",
     "react-table": "^6.7.6",
+    "react-toastify": "^3.3.4",
     "reactstrap": "^5.0.0-beta",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
@@ -77,7 +78,6 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.3",
     "@types/express": "^4.11.1",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
@@ -89,7 +89,9 @@
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
+    "@types/react-syntax-highlighter": "0.0.5",
     "@types/react-table": "^6.7.3",
+    "@types/react-transition-group": "^2.0.7",
     "@types/reactstrap": "^5.0.17",
     "@types/recharts": "^1.0.13",
     "@types/redux-form": "^7.0.12",
