--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,6 +33,7 @@
     "react-autosuggest": "^9.3.3",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
@@ -86,6 +87,7 @@
     "@types/react": "^16.0.34",
     "@types/react-autosuggest": "^9.3.3",
     "@types/react-dom": "^16.0.3",
+    "@types/react-icons": "^2.2.5",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
