ENH: optimize server Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,15 +1,15 @@
 FROM python:3.5-slim
 
-WORKDIR /server
-
-COPY . .
-
 # install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git
 
 # install Python dependencies
+COPY requirements.txt .
 RUN pip install -r requirements.txt
+
+WORKDIR /server
+COPY . .
 
 EXPOSE 5000
 
