--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -31,6 +31,7 @@
     "raven-js": "^3.22.1",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.3",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
@@ -86,6 +87,7 @@
     "@types/ramda": "^0.25.16",
     "@types/react": "^16.0.34",
     "@types/react-autosuggest": "^9.3.3",
+    "@types/react-copy-to-clipboard": "^4.2.5",
     "@types/react-dom": "^16.0.3",
     "@types/react-icons": "^2.2.5",
     "@types/react-redux": "^5.0.14",
