--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -29,13 +29,13 @@
     "raf": "3.4.0",
     "ramda": "^0.25.0",
     "raven-js": "^3.22.1",
-    "react": "^16.2.0",
+    "react": "^16.3.1",
     "react-autosuggest": "^9.3.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "4.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-syntax-highlighter": "^7.0.1",
@@ -88,9 +88,9 @@
     "@types/react": "^16.3.5",
     "@types/react-autosuggest": "^9.3.3",
     "@types/react-copy-to-clipboard": "^4.2.5",
-    "@types/react-dom": "^16.0.3",
+    "@types/react-dom": "^16.0.4",
     "@types/react-icons": "^2.2.5",
-    "@types/react-redux": "^5.0.14",
+    "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
     "@types/react-syntax-highlighter": "0.0.5",
