--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axetroy/react-download": "^1.1.0",
     "@types/react-tabs": "^1.0.4",
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
