ENH: update to TypeScript 2.9

--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -17,7 +17,8 @@
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
