ENH: add compatibility with Typescript 2.9

--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -18,7 +18,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "keyofStringsOnly": true
   },
   "exclude": [
     "node_modules",
