--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   DOCKER_DRIVER: overlay2
 
 test:dashboard:
-  image: node:carbon-slim
+  image: node:9-slim
   stage: test
   before_script:
     - cd dashboard
