--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -31,7 +31,7 @@
     "raf": "3.4.0",
     "ramda": "^0.25.0",
     "raven-js": "^3.22.1",
-    "react": "^16.3.1",
+    "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "4.2.1",
@@ -44,7 +44,7 @@
     "react-table": "^6.7.6",
     "react-tabs": "^2.2.1",
     "react-toastify": "^3.3.4",
-    "reactstrap": "^5.0.0-beta",
+    "reactstrap": "^6.2.0",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-catch": "^1.3.1",
@@ -99,7 +99,7 @@
     "@types/react-syntax-highlighter": "0.0.5",
     "@types/react-table": "^6.7.3",
     "@types/react-transition-group": "^2.0.7",
-    "@types/reactstrap": "^5.0.17",
+    "@types/reactstrap": "^6.0.0",
     "@types/recharts": "^1.0.18",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
