--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -37,6 +37,7 @@
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
+    "react-loading": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
