--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -46,15 +46,16 @@
     "react-tabs": "^2.2.1",
     "react-toastify": "^3.3.4",
     "reactstrap": "^6.2.0",
-    "recharts": "^1.0.0-beta.10",
-    "redux": "^3.7.2",
+    "recharts": "^1.1.0",
+    "redux": "^4.0.0",
     "redux-catch": "^1.3.1",
     "redux-form": "^7.2.1",
-    "redux-observable": "^0.17.0",
+    "redux-observable": "^1.0.0",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.2.2",
+    "rxjs-tslint": "^0.1.5",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
@@ -62,7 +63,7 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^20.0.7",
     "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
+    "tslint": "^5.11.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
     "typescript": "^3.0.1",
@@ -101,7 +102,7 @@
     "@types/react-table": "^6.7.3",
     "@types/react-transition-group": "^2.0.7",
     "@types/reactstrap": "^6.0.0",
-    "@types/recharts": "^1.0.18",
+    "@types/recharts": "^1.0.26",
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
     "@types/reselect": "^2.2.0",
@@ -111,7 +112,8 @@
     "compression-webpack-plugin": "^1.1.7",
     "react-hot-loader": "^4.0.0-rc.0",
     "redux-logger": "^3.0.6",
-    "typings-for-css-modules-loader": "^1.7.0"
+    "typings-for-css-modules-loader": "^1.7.0",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "jest": {
     "collectCoverageFrom": [
