--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -34,6 +34,7 @@
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-day-picker": "^7.2.1",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
