--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "chroma-js": "^1.3.7",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "ellipsize": "0.0.3",
@@ -86,6 +87,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chroma-js": "^1.3.5",
     "@types/express": "^4.11.1",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
