--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -72,6 +72,7 @@
     "typescript-fsa-reducers": "^0.4.5",
     "url": "^0.11.0",
     "url-loader": "0.6.2",
+    "uuid": "^3.3.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
@@ -108,6 +109,7 @@
     "@types/redux-form": "^7.0.12",
     "@types/redux-logger": "^3.0.5",
     "@types/reselect": "^2.2.0",
+    "@types/uuid": "^3.4.4",
     "@types/webpack-env": "^1.13.5",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
