--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,6 +33,7 @@
     "raven-js": "^3.22.1",
     "react": "^16.5.1",
     "react-autosuggest": "^9.3.4",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.1",
     "react-dev-utils": "4.2.1",
