ENH: optimize charts with cache

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,6 +22,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "memoize-one": "^4.0.2",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
@@ -93,6 +94,7 @@
     "@types/express": "^4.11.1",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
+    "@types/memoize-one": "^3.1.1",
     "@types/node": "^9.3.0",
     "@types/ramda": "^0.25.34",
     "@types/react": "^16.4.9",
