--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -48,6 +48,7 @@
     "react-table": "^6.7.6",
     "react-tabs": "^2.2.1",
     "react-toastify": "^3.3.4",
+    "react-virtualized": "^9.21.0",
     "reactstrap": "^6.2.0",
     "recharts": "^1.3.1",
     "redux": "^4.0.0",
@@ -108,6 +109,7 @@
     "@types/react-syntax-highlighter": "0.0.5",
     "@types/react-table": "^6.7.3",
     "@types/react-transition-group": "^2.0.7",
+    "@types/react-virtualized": "^9.18.7",
     "@types/reactstrap": "^6.0.0",
     "@types/recharts": "^1.0.26",
     "@types/redux-form": "^7.0.12",
