--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,25 +6,25 @@
     "@types/react-tabs": "^1.0.4",
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chroma-js": "^1.3.7",
-    "css-loader": "0.28.7",
+    "css-loader": "^2.1.1",
     "dotenv": "4.0.0",
     "ellipsize": "0.0.3",
     "express": "^4.16.2",
     "express-static-gzip": "^0.3.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
-    "fork-ts-checker-webpack-plugin": "^0.2.8",
+    "fork-ts-checker-webpack-plugin": "^1.3.4",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "^24.8.0",
     "memoize-one": "^4.0.2",
     "moment": "^2.20.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.12.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -37,7 +37,7 @@
     "react-bootstrap-toggle": "^2.3.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.1",
-    "react-dev-utils": "4.2.1",
+    "react-dev-utils": "^9.0.1",
     "react-dom": "^16.5.1",
     "react-icons": "^2.2.7",
     "react-loading": "^2.0.2",
@@ -50,7 +50,7 @@
     "react-toastify": "^3.3.4",
     "react-virtualized": "^9.21.0",
     "reactstrap": "^6.2.0",
-    "recharts": "^1.3.5",
+    "recharts": "^1.6.2",
     "redux": "^4.0.0",
     "redux-catch": "^1.3.1",
     "redux-form": "^7.2.1",
@@ -65,7 +65,7 @@
     "style-loader": "0.19.0",
     "styled-components": "^3.4.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "^20.0.7",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^2.3.7",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.3",
@@ -77,7 +77,7 @@
     "url-loader": "0.6.2",
     "uuid": "^3.3.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
+    "webpack-dev-server": "^3.4.1",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
@@ -123,7 +123,7 @@
     "react-hot-loader": "^4.0.0-rc.0",
     "redux-logger": "^3.0.6",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack-bundle-analyzer": "^2.13.1"
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "jest": {
     "collectCoverageFrom": [
